# Modul_5_project

./: .env.example  README.md  main.py  pyproject.toml
data/: employers_id.json
src/: api_query.py  db_create.py  db_manager.py  user_interaction.py
